force-app/main/default/objects/Activity_IQVIA__c/Activity_IQVIA__c.object-meta.xml
<CustomObject>
    <label>Activity IQVIA</label>
    <nameField>
        <label>Activity IQVIA ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities IQVIA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>