force-app/main/default/objects/Activity_IQVIA__c/fields/Act_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Act_End_Date__c</fullName>
    <description>Act End Date</description>
    <label>Act End Date</label>
    <type>Date</type>
</CustomField>