force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>Act_Individual_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Act Individual ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities IQVIA</relationshipLabel>
    <relationshipName>Activities_IQVIA_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>