force-app/main/default/objects/Activity_IQVIA__c/fields/Act_OneKey_ID__c.field-meta.xml
<CustomField>
    <fullName>Act_OneKey_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Act OneKey ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>