force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Position_Role_Label__c.field-meta.xml
<CustomField>
    <fullName>Act_Position_Role_Label__c</fullName>
    <label>Act. Position/Role Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>