force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Act_Relationship_Type__c</fullName>
    <label>Act. Relationship Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>