force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Act_Start_Date__c</fullName>
    <label>Act. Start Date</label>
    <type>Date</type>
</CustomField>