force-app/main/default/objects/Activity_IQVIA__c/fields/Act_State_Date__c.field-meta.xml
<CustomField>
    <fullName>Act_State_Date__c</fullName>
    <label>Act. State Date</label>
    <type>Date</type>
</CustomField>