force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Status__c.field-meta.xml
<CustomField>
    <fullName>Act_Status__c</fullName>
    <description>Act Status</description>
    <label>Act Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>