force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Usage_Restricted_Email__c.field-meta.xml
<CustomField>
    <fullName>Act_Usage_Restricted_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Act Usage Restricted Email</label>
    <type>Checkbox</type>
</CustomField>