force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Usage_Restricted_Phone__c.field-meta.xml
<CustomField>
    <fullName>Act_Usage_Restricted_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Act Usage Restricted Phone</label>
    <type>Checkbox</type>
</CustomField>