force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Working_Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Act_Working_Status_Label__c</fullName>
    <label>Act Working Status Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>