force-app/main/default/objects/Activity_IQVIA__c/fields/Act_Workplace_ID__c.field-meta.xml
<CustomField>
    <fullName>Act_Workplace_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Act Workplace ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities IQVIA (Act Workplace ID)</relationshipLabel>
    <relationshipName>Activities_IQVIA_Workplace</relationshipName>
    <type>Lookup</type>
</CustomField>