force-app/main/default/objects/Activity_IQVIA__c/fields/Main_Activity_Flag__c.field-meta.xml
<CustomField>
    <fullName>Main_Activity_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Activity Flag</label>
    <type>Checkbox</type>
</CustomField>