force-app/main/default/objects/Activity_IQVIA__c/fields/Role_01__c.field-meta.xml
<CustomField>
    <fullName>Role_01__c</fullName>
    <label>Role 01</label>
    <length>100</length>
    <type>Text</type>
</CustomField>