force-app/main/default/objects/Activity_IQVIA__c/fields/Role_02__c.field-meta.xml
<CustomField>
    <fullName>Role_02__c</fullName>
    <label>Role 02</label>
    <length>100</length>
    <type>Text</type>
</CustomField>